# Web_RAG_App

./: .gitignore  main.py  pyproject.toml
app/chunker/: chunker.py  markdown.py  models.py  storage.py
app/cleaner/: cleaner.py  storage.py
app/config/: settings.py
app/crawler/: crawler.py  models.py  parser.py  storage.py
app/embeddings/: chroma.py  embedder.py  indexer.py  storage.py
data/chunks/: chunks.json
data/cleaned/: pages.json
scripts/: chunk.py  clean.py  crawl.py  index.py
