[project]
name = "web-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "crawl4ai>=0.9.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]
